# hr-admin-api/hr-admin-swagger.json
@@ -323,6 +323,60 @@
         ]
       }
     },
+    "/api/admin/create": {
+      "post": {
+        "summary": "创建管理员",
+        "operationId": "CreateAdmin",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/CreateAdminResp"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/CreateAdminReq"
+            }
+          }
+        ],
+        "requestBody": {},
+        "tags": [
+          "admin"
+        ]
+      }
+    },
+    "/api/admin/delete": {
+      "post": {
+        "summary": "删除管理员",
+        "operationId": "DeleteAdmin",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {}
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/DeleteAdminReq"
+            }
+          }
+        ],
+        "requestBody": {},
+        "tags": [
+          "admin"
+        ]
+      }
+    },
     "/api/admin/evaluation/add": {
       "post": {
         "summary": "添加评价标准",
@@ -622,6 +676,34 @@
             }
           }
         },
+        "requestBody": {},
+        "tags": [
+          "admin"
+        ]
+      }
+    },
+    "/api/admin/login-by-password": {
+      "post": {
+        "summary": "管理员密码登录",
+        "operationId": "AdminLoginByPassword",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/LoginResp"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/AdminLoginByPasswordReq"
+            }
+          }
+        ],
         "requestBody": {},
         "tags": [
           "admin"
@@ -1512,6 +1594,60 @@
           "times"
         ]
       }
+    },
+    "/api/admin/update": {
+      "post": {
+        "summary": "更新管理员",
+        "operationId": "UpdateAdmin",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/UpdateAdminResp"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/UpdateAdminReq"
+            }
+          }
+        ],
+        "requestBody": {},
+        "tags": [
+          "admin"
+        ]
+      }
+    },
+    "/api/admin/update-password": {
+      "post": {
+        "summary": "更新管理员密码",
+        "operationId": "UpdateAdminPassword",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {}
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/UpdateAdminPasswordReq"
+            }
+          }
+        ],
+        "requestBody": {},
+        "tags": [
+          "admin"
+        ]
+      }
     }
   },
   "definitions": {
@@ -1610,6 +1746,22 @@
         "user_id",
         "group_id",
         "power"
+      ]
+    },
+    "AdminLoginByPasswordReq": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string"
+        },
+        "password": {
+          "type": "string"
+        }
+      },
+      "title": "AdminLoginByPasswordReq",
+      "required": [
+        "name",
+        "password"
       ]
     },
     "Admit": {
@@ -1851,6 +2003,47 @@
         "groups"
       ]
     },
+    "CreateAdminReq": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string"
+        },
+        "password": {
+          "type": "string"
+        },
+        "groups": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
+        },
+        "sms_enabled": {
+          "type": "boolean",
+          "format": "boolean"
+        }
+      },
+      "title": "CreateAdminReq",
+      "required": [
+        "name",
+        "password",
+        "groups",
+        "sms_enabled"
+      ]
+    },
+    "CreateAdminResp": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "integer",
+          "format": "int64"
+        }
+      },
+      "title": "CreateAdminResp",
+      "required": [
+        "id"
+      ]
+    },
     "CreateExamReq": {
       "type": "object",
       "properties": {
@@ -1909,6 +2102,19 @@
       "title": "DailyNewResp",
       "required": [
         "applicants"
+      ]
+    },
+    "DeleteAdminReq": {
+      "type": "object",
+      "properties": {
+        "admin_id": {
+          "type": "integer",
+          "format": "int64"
+        }
+      },
+      "title": "DeleteAdminReq",
+      "required": [
+        "admin_id"
       ]
     },
     "DeleteApplicantReq": {
@@ -3830,6 +4036,65 @@
         "end",
         "color",
         "category"
+      ]
+    },
+    "UpdateAdminPasswordReq": {
+      "type": "object",
+      "properties": {
+        "admin_id": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "password": {
+          "type": "string"
+        }
+      },
+      "title": "UpdateAdminPasswordReq",
+      "required": [
+        "admin_id",
+        "password"
+      ]
+    },
+    "UpdateAdminReq": {
+      "type": "object",
+      "properties": {
+        "admin_id": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "name": {
+          "type": "string"
+        },
+        "groups": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
+        },
+        "sms_enabled": {
+          "type": "boolean",
+          "format": "boolean"
+        }
+      },
+      "title": "UpdateAdminReq",
+      "required": [
+        "admin_id",
+        "name",
+        "groups",
+        "sms_enabled"
+      ]
+    },
+    "UpdateAdminResp": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "integer",
+          "format": "int64"
+        }
+      },
+      "title": "UpdateAdminResp",
+      "required": [
+        "id"
       ]
     },
     "UpdateEvaluationReq": {
