# hr-admin-api/internal/handler/admin/adminloginbypasswordhandler.go
@@ -1,0 +1,28 @@
+package admin
+
+import (
+	"net/http"
+
+	"HR_Go/hr-admin-api/internal/logic/admin"
+	"HR_Go/hr-admin-api/internal/svc"
+	"HR_Go/hr-admin-api/internal/types"
+	"github.com/zeromicro/go-zero/rest/httpx"
+)
+
+func AdminLoginByPasswordHandler(svcCtx *svc.ServiceContext) http.HandlerFunc {
+	return func(w http.ResponseWriter, r *http.Request) {
+		var req types.AdminLoginByPasswordReq
+		if err := httpx.Parse(r, &req); err != nil {
+			httpx.ErrorCtx(r.Context(), w, err)
+			return
+		}
+
+		l := admin.NewAdminLoginByPasswordLogic(r.Context(), svcCtx)
+		resp, err := l.AdminLoginByPassword(&req)
+		if err != nil {
+			httpx.ErrorCtx(r.Context(), w, err)
+		} else {
+			httpx.OkJsonCtx(r.Context(), w, resp)
+		}
+	}
+}
