# hr-admin-api/internal/handler/admin/deleteadminhandler.go
@@ -1,0 +1,28 @@
+package admin
+
+import (
+	"net/http"
+
+	"HR_Go/hr-admin-api/internal/logic/admin"
+	"HR_Go/hr-admin-api/internal/svc"
+	"HR_Go/hr-admin-api/internal/types"
+	"github.com/zeromicro/go-zero/rest/httpx"
+)
+
+func DeleteAdminHandler(svcCtx *svc.ServiceContext) http.HandlerFunc {
+	return func(w http.ResponseWriter, r *http.Request) {
+		var req types.DeleteAdminReq
+		if err := httpx.Parse(r, &req); err != nil {
+			httpx.ErrorCtx(r.Context(), w, err)
+			return
+		}
+
+		l := admin.NewDeleteAdminLogic(r.Context(), svcCtx)
+		err := l.DeleteAdmin(&req)
+		if err != nil {
+			httpx.ErrorCtx(r.Context(), w, err)
+		} else {
+			httpx.Ok(w)
+		}
+	}
+}
