# hr-admin-api/internal/handler/admin/updateadminhandler.go
@@ -1,0 +1,28 @@
+package admin
+
+import (
+	"net/http"
+
+	"HR_Go/hr-admin-api/internal/logic/admin"
+	"HR_Go/hr-admin-api/internal/svc"
+	"HR_Go/hr-admin-api/internal/types"
+	"github.com/zeromicro/go-zero/rest/httpx"
+)
+
+func UpdateAdminHandler(svcCtx *svc.ServiceContext) http.HandlerFunc {
+	return func(w http.ResponseWriter, r *http.Request) {
+		var req types.UpdateAdminReq
+		if err := httpx.Parse(r, &req); err != nil {
+			httpx.ErrorCtx(r.Context(), w, err)
+			return
+		}
+
+		l := admin.NewUpdateAdminLogic(r.Context(), svcCtx)
+		resp, err := l.UpdateAdmin(&req)
+		if err != nil {
+			httpx.ErrorCtx(r.Context(), w, err)
+		} else {
+			httpx.OkJsonCtx(r.Context(), w, resp)
+		}
+	}
+}
